--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ ul li:nth-child(9){
     animation-delay: 0.9s;
 }
 
+
+footer{
+    background: #222;
+    height: 15vh;
+    color: #f1f1f1;
+    text-align: center;
+    padding-top: 50px;
+}
+
         </style>
     </head>
     <body>
@@ -103,6 +112,9 @@ ul li:nth-child(9){
         
         
     </header>
+    <footer>
+        <div class="footer">&copy; Copyright By MOHAMED ALI YOUSSOUF</div>
+    </footer>
     </body>
 </html>
   
