--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ footer{
         
         
     </header>
+    <canvas></canvas>
     <footer>
         <div class="footer">&copy; Copyright By MOHAMED ALI YOUSSOUF</div>
     </footer>
